add passesBall api
